scripts/dpkg-buildpackage.sh: fix logic error in source-only building scripts/dpkg-source.pl: handle Bugs and Origin tags po/*: updated for current sources

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@ Sun Nov  5 16:28:26 CET 2000 Wichert Akkerman <wakkerma@debian.org>
   * include/dpkg-db.h: add Origin and Bugs to pkginfoperfile struct
   * dpkg-deb/main.c, dpkg-deb/dpkg-deb.h: fix type for compression
   * Makefile.in: install origin file
+  * scripts/dpkg-buildpackage.sh: fix logic error in source-only building
+  * scripts/dpkg-source.pl: handle Bugs and Origin tags
 
 Sun Nov  5 10:00:31 EST 2000 Ben Collins <bcollins@debian.org>
 
