--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon 06 Nov 07:24:11 CET 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated.
+
 Sun Nov  5 16:28:26 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/dpkg.conffiles: added missing file
