scripts/dpkg-statoverride.8: fix typos scripts/dpkg-statoverride.pl: replace dpkglibdir with admindir (oops) scripts/update-alternatives.pl: handle the fact that the Makefile     changes our $admindir assignment so we have to manually add     "/alternatives" to the path

--- a/scripts/dpkg-statoverride.8
+++ b/scripts/dpkg-statoverride.8
@@ -15,7 +15,7 @@ handles, including directories, devices, etc.).  This can be used to
 force programs that are normall setuid to be install without a setuid
 flag, or only executable by a certain group.
 .P
-\fBdpkg-statoverride\fR is a utility to manager the list of stat
+\fBdpkg-statoverride\fR is a utility to manage the list of stat
 overrides.  It has three basic functions: adding, removing and listing
 overrides.
 .SH OPTIONS
