--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Nov  7 00:45:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-statoverride.8: fix typos
+  * scripts/dpkg-statoverride.pl: replace dpkglibdir with admindir (oops)
+  * scripts/update-alternatives.pl: handle the fact that the Makefile
+    changes our $admindir assignment so we have to manually add
+    "/alternatives" to the path
+
 Mon 06 Nov 07:24:11 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated.
