--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dpkg (1.7.1) unstable; urgency=medium
+
+  * Fix a typo in the dpkg-statoveride manpage
+  * dpkg-statoverride reads and writes the right file now
+  * Make update-alternatives use the right dir for alternatives again
+
+ -- Wichert Akkerman <wakkerma@debian.org>  Tue,  7 Nov 2000 01:16:39 +0100
+
 dpkg (1.7.0) unstable; urgency=low
 
   * Allow the administrator to override file mode and ownership using the
