Chop read lines in myfileopt

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Nov  7 22:05:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * lib/myopt.c: chop read lines in myfileopt
+
 Tue Nov  7 00:45:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-statoverride.8: fix typos
