--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.7.2) unstable; urgency=low
+
+  * Fix parsing of configuration files
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.7.1) unstable; urgency=medium
 
   * Fix a typo in the dpkg-statoveride manpage
