Remove emacs helper scripts

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Nov  8 14:55:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * Makefile.conf, debian/rules: no longer install any emacs support stuff
+  * debian/50dpkg-dev.el, scripts/debian-changelog-mode.el: removed
+
 Tue Nov  7 22:05:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/myopt.c: chop read lines in myfileopt
