--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.7.2) unstable; urgency=low
 
   * Fix parsing of configuration files
+  * No longer bother to install emacs things. I don't use emacs myself
+    and can't support that properly.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
