Add powerpc-linux-gnu entry to archtable

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ Wed Nov  8 14:55:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * Makefile.conf, debian/rules: no longer install any emacs support stuff
   * debian/50dpkg-dev.el, scripts/debian-changelog-mode.el: removed
+  * archtable: add powerpc-linux-gnu entry
+  * debian/dpkg.conffiles: sync with dpkg-17 tree
 
 Tue Nov  7 22:05:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
@@ -10,7 +12,9 @@ Tue Nov  7 22:05:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 Tue Nov  7 00:45:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-statoverride.8: fix typos
-  * scripts/dpkg-statoverride.pl: replace dpkglibdir with admindir (oops)
+  * scripts/dpkg-statoverride.pl:
+    + replace dpkglibdir with admindir (oops)
+    + open new file for writing in WriteOverrides
   * scripts/update-alternatives.pl: handle the fact that the Makefile
     changes our $admindir assignment so we have to manually add
     "/alternatives" to the path
