--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.7.2) unstable; urgency=low
 
   * Fix parsing of configuration files
+  * Add new powerpc-linux-gnu entry to archtable. Closes: Bug#76522
   * No longer bother to install emacs things. I don't use emacs myself
     and can't support that properly.
 
