small fixup in internals manual build

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Nov  9 13:53:21 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/Makefile.in: use internals.html/index.html as dependency target
+    so we only rebuild the docs when really needed
+
 Wed Nov  8 14:55:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * Makefile.conf, debian/rules: no longer install any emacs support stuff
