--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 23 17:52:44 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * lib/fields.c, lib/dump.c: fix two memory leaks
+
 Thu Nov 23 15:48:53 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-buildpackage.sh: Name .changes file properly if
