--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.8.0) unstable; urgency=low
+
+  * Fix two memory leaks. Closes: Bug#74259
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.7.2) unstable; urgency=low
 
   * Fix parsing of configuration files
