scripts/dpkg-scansources.pl: Fix getopt usage since perl5.6 complains about it. doc/deb-old.5,doc/deb.5,main/dpkg.8,scripts/dpkg-name.1, split/dpkg-split.8 : update to reflect that dpkg-deb is in section 1

--- a/split/dpkg-split.8
+++ b/split/dpkg-split.8
@@ -244,9 +244,9 @@ The filenames used in this directory are in a format internal to
 and are unlikely to be useful to other programs, and in any case the
 filename format should not be relied upon.
 .SH SEE ALSO
-.BR dpkg\-split (5),
-.BR dpkg\-deb (5),
-.BR dpkg\-deb (8),
+.BR deb (5),
+.BR deb\-control (5),
+.BR dpkg\-deb (1),
 .BR dpkg (8)
 .SH AUTHOR
 .B dpkg\-split
