--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Nov 24 16:49:26 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-scansources.pl: Fix getopt usage since perl5.6 complains
+    about it.
+  * doc/deb-old.5,doc/deb.5,main/dpkg.8,scripts/dpkg-name.1,
+    split/dpkg-split.8 : update to reflect that dpkg-deb is in section 1
+
 Thu Nov 23 19:13:21 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/myopt.c: properly chomp read lines
