--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue 28 Nov 18:48:52 CET 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Terminology changes
+
 Sat 25 Nov 22:05:19 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation
