Update Galish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@ Thu Nov 30 02:45:42 CET 2000 Wichert Akkerman <wakkerma@debian.org>
   * scripts/dpkg-statoverride.{pl,8}: add new --import option to
     import settings from /etc/suid.conf
 
+Wed Nov 29 17:56:43 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/gl.po: updated
+
 Tue 28 Nov 18:48:52 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Terminology changes
@@ -135,7 +139,7 @@ Mon Oct 16 10:45:47 EDT 2000 Ben Collins <bcollins@debian.org>
 
 Sat Oct  7 22:18:43 CEST 2000 Wichert Akkerman <wakkerma@debian.org> 
 
-  * po/gl.po, configure.in: add new Galish translation from  Alberto Garcia
+  * po/gl.po, configure.in: add new Galician translation from  Alberto Garcia
   * po/pt_BR.po, configure.in: add new Brazilian translation from
     Carlos Laviola
   * THANKS: add Alberto and Carlos
