--- a/po/gl.po
+++ b/po/gl.po
@@ -4,9 +4,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.6.14\n"
-"POT-Creation-Date: 2000-11-05 17:51+0100\n"
-"PO-Revision-Date: 2000-09-16 00:07+0200\n"
+"Project-Id-Version: dpkg 1.7.1.1\n"
+"POT-Creation-Date: 2000-11-07 01:16+0100\n"
+"PO-Revision-Date: 2000-11-27 00:07+0200\n"
 "Last-Translator: Alberto García <berto@gpul.org>\n"
 "Language-Team: Galician <gpul-traduccion@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -368,7 +368,7 @@ msgstr ""
 
 #: lib/fields.c:339
 msgid "Only exact versions may be used for Provides"
-msgstr ""
+msgstr "Só se poden usar versións exactas en Provides"
 
 #: lib/fields.c:343
 #, c-format
@@ -507,34 +507,34 @@ msgid "failed in copy on read (control)"
 msgstr "erro ó copiar en lectura (control)"
 
 #: lib/myopt.c:38
-#, fuzzy, c-format
+#, c-format
 msgid "failed to open configuration file `%.255s' for reading"
-msgstr "erro ó abrir o ficheiro de información de paquetes `%.255s' para ler"
+msgstr "erro ó abrir o ficheiro de configuración `%.255s' para ler"
 
 #: lib/myopt.c:67
 #, c-format
 msgid "configuration error: unknown option %s"
-msgstr ""
+msgstr "erro de configuración: opción %s descoñecida"
 
 #: lib/myopt.c:70
 #, c-format
 msgid "configuration error: %s needs a value"
-msgstr ""
+msgstr "erro de configuración: %s precisa dun valor"
 
 #: lib/myopt.c:74
-#, fuzzy, c-format
+#, c-format
 msgid "configuration error: %s does not take a value"
-msgstr "a opción -%c non leva parámetros"
+msgstr "erro de configuración: %s non leva parámetros"
 
 #: lib/myopt.c:79
-#, fuzzy, c-format
+#, c-format
 msgid "read error in configuration file `%.255s'"
-msgstr "erro lendo o ficheiro de opcións `%.250s'"
+msgstr "erro lendo o ficheiro de opcións `%.255s'"
 
 #: lib/myopt.c:80
-#, fuzzy, c-format
+#, c-format
 msgid "error closing configuration file `%.255s'"
-msgstr "erro lendo o ficheiro de opcións `%.250s'"
+msgstr "erro lendo o ficheiro de opcións `%.255s'"
 
 #: lib/myopt.c:103
 #, c-format
@@ -841,7 +841,7 @@ msgstr "erro escribindo en `%.255s'"
 #: main/archives.c:418
 #, c-format
 msgid "tarobject ... stat override, uid=%d, gid=%d, mode=%04o"
-msgstr ""
+msgstr "tarobject ... stat override, uid=%d, gid=%d, mode=%04o"
 
 #: main/archives.c:431
 #, c-format
@@ -1036,7 +1036,7 @@ msgstr "--%s precisa polo menos dun ficheiro de paquete como argumento"
 #: main/archives.c:859
 #, c-format
 msgid "Selecting previously deselected package %s.\n"
-msgstr "Seleccionando o paquete %s previamente non seleccionado.\n"
+msgstr "Seleccionando o paquete %s non seleccionado previamente.\n"
 
 #: main/archives.c:864
 #, c-format
@@ -1712,7 +1712,7 @@ msgstr "desviado por %s"
 #: main/enquiry.c:485
 #, c-format
 msgid " to: %s\n"
-msgstr ""
+msgstr " a: %s\n"
 
 #: main/enquiry.c:503
 msgid ""
@@ -1804,9 +1804,8 @@ msgid "no gcc-lib component"
 msgstr "non hai compoñente gcc-lib"
 
 #: main/enquiry.c:710
-#, fuzzy
 msgid "no slash after gcc-lib"
-msgstr "non hai ningún guión despois de gcc-lib"
+msgstr "non hai ningunha barra despois de gcc-lib"
 
 #: main/enquiry.c:722
 #, c-format
@@ -1954,23 +1953,20 @@ msgid "failed to install updated files list file for package %s"
 msgstr "erro ó instalar a lista de ficheiros actualizada do paquete %s"
 
 #: main/filesdb.c:341
-#, fuzzy
 msgid "failed to open statoverride file"
-msgstr "erro ó abrir o ficheiro de desvíos"
+msgstr "erro ó abrir o ficheiro de `statoverride'"
 
 #: main/filesdb.c:345
-#, fuzzy
 msgid "failed to fstat statoverride file"
-msgstr "erro ó facer `fstat' do ficheiro de desvíos"
+msgstr "erro ó facer `fstat' do ficheiro de `statoverride'"
 
 #: main/filesdb.c:348
-#, fuzzy
 msgid "failed to fstat previous statoverride file"
-msgstr "erro ó facer `fstat' do ficheiro de desvíos previo"
+msgstr "erro ó facer `fstat' do ficheiro de `statoverride' previo"
 
 #: main/filesdb.c:383
 msgid "statoverride file contains empty line"
-msgstr ""
+msgstr "o ficheiro de `statoverride' contén unha liña baleira"
 
 #: main/filesdb.c:468
 msgid "failed to open diversions file"
@@ -2187,7 +2183,7 @@ msgstr ""
 "Vexa dpkg --licence para o copyright e os detalles da licencia.\n"
 
 #: main/main.c:58
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: \n"
 "  dpkg -i|--install      <.deb file name> ... | -R|--recursive <dir> ...\n"
@@ -2323,7 +2319,7 @@ msgstr ""
 "                                 con <paquete>\n"
 "  --force-...                    Ignora os problemas - vexa --force-help\n"
 "  --no-force-...|--refuse-...    Para cando se atopen problemas\n"
-"  dpkg --abort-after <n>     cancela se se atopan <n> erros\n"
+"  --abort-after <n>          Cancela se se atopan <n> erros\n"
 "\n"
 "Os operadores de comparación para --compare-versions son:\n"
 " lt le eq ne ge gt       (as versións inexistentes considéranse como\n"
@@ -2425,7 +2421,7 @@ msgstr "enteiro inválido para --%s: `%.250s'"
 
 #  `incidental' -> tomei a traducción da versión castelá
 #: main/main.c:263
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2470,9 +2466,10 @@ msgstr ""
 "  configure-any          Configura calquera paquete que poida axudar a este\n"
 "  hold                   Procesa paquetes accesorios cando se conxelan\n"
 "  bad-path               No PATH faltan programas importantes, é moi\n"
-"                         posible que haxa problemas  not-root               "
-"Intenta (des)instalar cousas anque non se sexa root\n"
-"  overwrite[*]           Sobrescribe un ficheiro dun paquete con outro\n"
+"                         posible que haxa problemas\n"
+"  not-root               Intenta (des)instalar cousas anque non se sexa "
+"root\n"
+"  overwrite              Sobrescribe un ficheiro dun paquete con outro\n"
 "  overwrite-diverted     Sobrescribe un ficheiro desviado cunha versión\n"
 "                         non desviada\n"
 "  depends-version [!]    Convirte en avisos os problemas de dependencia\n"
@@ -2636,7 +2633,7 @@ msgstr "dpkg: aviso - ¡ ignorando problema de pre-dependencias !\n"
 #: main/processarc.c:257
 #, c-format
 msgid "Preparing to replace %s %s (using %s) ...\n"
-msgstr "Preparando para reemplazar %s %s (usando %s) ...\n"
+msgstr "Preparando para remprazar %s %s (usando %s) ...\n"
 
 #: main/processarc.c:262
 #, c-format
@@ -2672,7 +2669,7 @@ msgstr "Desconfigurando %s, para que se poida desinstalar %s ...\n"
 #: main/processarc.c:431
 #, c-format
 msgid "Unpacking replacement %.250s ...\n"
-msgstr "Desempaquetando o reemplazo %.250s ...\n"
+msgstr "Desempaquetando o remprazo de %.250s ...\n"
 
 #: main/processarc.c:510
 msgid "unable to exec dpkg-deb to get filesystem archive"
@@ -2759,7 +2756,7 @@ msgstr ""
 #: main/processarc.c:863
 #, c-format
 msgid "(Noting disappearance of %s, which has been completely replaced.)\n"
-msgstr "(Note a desaparición de %s, que foi completamente reemplazado.)\n"
+msgstr "(Note a desaparición de %s, que foi completamente remprazado.)\n"
 
 #: main/processarc.c:899
 #, c-format
@@ -3187,9 +3184,8 @@ msgid "failed to unlink tmpfile (data), %s"
 msgstr "non se puido facer `unlink' do ficheiro temporal (data), %s"
 
 #: dpkg-deb/build.c:392
-#, fuzzy
 msgid "failed to exec find"
-msgstr "erro ó executar tar"
+msgstr "erro ó executar find"
 
 #  Non sei ningunha forma mellor de traducilo
 #: dpkg-deb/build.c:425
@@ -3197,14 +3193,13 @@ msgid "no compression copy loop"
 msgstr "sen compresión"
 
 #: dpkg-deb/build.c:431
-#, fuzzy, c-format
+#, c-format
 msgid "failed to exec gzip %s from tar -cf"
-msgstr "non se puido executar gzip %s desde tar --exclude"
+msgstr "non se puido executar gzip %s desde tar -cf"
 
 #: dpkg-deb/build.c:437 dpkg-deb/build.c:440
-#, fuzzy
 msgid "failed to write filename to tar pipe (data)"
-msgstr "non se puido retroceder no ficheiro temporal (data)"
+msgstr "non se puido escribir o nome do ficheiro na tubería do tar (data)"
 
 #: dpkg-deb/build.c:458
 msgid "failed to rewind tmpfile (data)"
@@ -3240,7 +3235,7 @@ msgstr "o ficheiro `%.250s' está corrompido - díxito erróneo (código %d) en %s"
 
 #: dpkg-deb/extract.c:84
 msgid "skipped member data"
-msgstr ""
+msgstr "omitindo datos do membro"
 
 #: dpkg-deb/extract.c:109
 #, c-format
@@ -3252,13 +3247,12 @@ msgid "failed to fstat archive"
 msgstr "non se puido facer `fstat' do arquivo"
 
 #: dpkg-deb/extract.c:111
-#, fuzzy
 msgid "version number"
-msgstr "a época na versión non é un número"
+msgstr "número de versión"
 
 #: dpkg-deb/extract.c:120
 msgid "between members"
-msgstr ""
+msgstr "entre membros"
 
 #  Non sei se se refire a un número máxico (magic number) ou a qué :-?
 #: dpkg-deb/extract.c:122 split/info.c:94
@@ -3281,7 +3275,7 @@ msgstr ""
 
 #: dpkg-deb/extract.c:133
 msgid "header info member"
-msgstr ""
+msgstr "membro da información da cabeceira"
 
 #: dpkg-deb/extract.c:136
 msgid "archive has no newlines in header"
@@ -3318,7 +3312,7 @@ msgstr ""
 
 #: dpkg-deb/extract.c:189
 msgid "ctrl information length"
-msgstr ""
+msgstr "lonxitude da información de control"
 
 #: dpkg-deb/extract.c:191
 #, c-format
@@ -3336,7 +3330,7 @@ msgstr ""
 
 #: dpkg-deb/extract.c:203
 msgid "ctrlarea"
-msgstr ""
+msgstr "ctrlarea"
 
 #: dpkg-deb/extract.c:209
 msgid ""
@@ -3382,7 +3376,7 @@ msgstr "erro ó facer `fdopen' de p1 na copia"
 
 #: dpkg-deb/extract.c:250
 msgid "member data"
-msgstr ""
+msgstr "datos do membro"
 
 #: dpkg-deb/extract.c:251
 msgid "failed to write to pipe in copy"
@@ -3731,7 +3725,7 @@ msgstr ""
 "        ... troceado cada:          %lu bytes\n"
 "    Número de parte:                %d/%d\n"
 "    Lonxitude de parte:             %lu bytes\n"
-"    Desplazamento de parte:         %lu bytes\n"
+"    Desprazamento de parte:         %lu bytes\n"
 "    Tamaño de ficheiro de parte\n"
 "                (porción usada):    %lu bytes\n"
 "\n"
@@ -3916,7 +3910,7 @@ msgstr "non se puido renomear o novo ficheiro de depósito `%.250s' a `%.250s'"
 #: split/queue.c:160
 #, c-format
 msgid "Part %d of package %s filed (still want "
-msgstr "Parte %d do paquete %d arquivada (aínda se necesitan "
+msgstr "Parte %d do paquete %s arquivada (aínda se necesitan "
 
 #: split/queue.c:164
 msgid " and "
@@ -4859,7 +4853,7 @@ msgstr "proporciona"
 
 #: dselect/pkgdisplay.cc:75
 msgid "replaces"
-msgstr "reemplaza a"
+msgstr "rempraza a"
 
 #: dselect/pkgdisplay.cc:76
 msgid "enhances"
@@ -5229,9 +5223,9 @@ msgstr ""
 "  t, Inicio             e, Fin                  salta ó principio/final\n"
 "  u                     d                       move a información 1 páxina\n"
 "  ^u                    ^d                      move a información 1 liña\n"
-"  B, Frecha esquerda    F, Frecha dereita       desplaza a visualización\n"
+"  B, Frecha esquerda    F, Frecha dereita       despraza a visualización\n"
 "                                                1/3 da pantalla\n"
-"  ^b                    ^f                      desplaza a visualización\n"
+"  ^b                    ^f                      despraza a visualización\n"
 "                                                1 carácter\n"
 "\n"
 "Marcar os paquetes para o seu procesado posterior:\n"
@@ -5644,19 +5638,19 @@ msgstr ""
 "Teclas de movemento: Re Páx/Av Páx, Inicio/Fin, Arriba/Abaixo, "
 "Adiante/Atrás:\n"
 "  n, Frecha abaixo      p, Frecha arriba        mover resaltado\n"
-"  N, Re páx, Espacio    P, Av páx, Retroceso    desplazar a lista nunha "
+"  N, Re páx, Espacio    P, Av páx, Retroceso    desprazar a lista nunha "
 "páxina\n"
-"  ^n                    ^p                      desplazar a lista nunha "
+"  ^n                    ^p                      desprazar a lista nunha "
 "liña\n"
 "  t, Inicio             e, Fin                  ir ó inicio/fin da lista\n"
-"  u                     d                       desplazar a información\n"
+"  u                     d                       desprazar a información\n"
 "                                                nunha páxina\n"
-"  ^u                    ^d                      desplazar a información\n"
+"  ^u                    ^d                      desprazar a información\n"
 "                                                nunha liña\n"
-"  B, Frecha esquerda    F, Frecha dereita       desplazar a mostra 1/3 da\n"
+"  B, Frecha esquerda    F, Frecha dereita       desprazar a mostra 1/3 da\n"
 "                                                pantalla\n"
-"  ^b                    ^f                      desplazar a mostra 1         "
-"                                        carácter\n"
+"  ^b                    ^f                      desprazar a mostra 1\n"
+"                                                carácter\n"
 "(Estas son as mesmas teclas de movemento que na mostra de lista de "
 "paquetes.)\n"
 "\n"
