--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.8.0) unstable; urgency=low
   * Fix two memory leaks. Closes: Bug#74259
   * Fix some things perl5.6 complains about. Closes: Bug#77337
   * Fix referenes to dpkg-deb manpage. Closes: Bug#77855
+  * Update Galish translation
   * Add new --import option to dpkg-statoverride to make it easy to
     import suidmanager settings.
 
