Improve description of --import option

--- a/scripts/dpkg-statoverride.8
+++ b/scripts/dpkg-statoverride.8
@@ -35,10 +35,10 @@ Remove an override for \fB<file>\fR.
 .TP
 .I --import <package> <file>
 Import the override for file \fB<file>\fR as provided by package
-\fB<package>\fR. If the user has not made an override nothing is
-done and the default permissions are used. If an override is present
-it is removed from \fI/etc/suid.conf\fR and added to the statoverride
-database.
+\fB<package>\fR from the suidmanager configuration. If the user
+has not made an override nothing is done and the default permissions
+are used. If an override is present it is removed from
+\fI/etc/suid.conf\fR and added to the statoverride database.
 .I --list [<glob-pattern>]
 List all overrides. If a glob pattern is specified restrict the output
 to overrides which match the glob.
