more dpkg-statoverride fixes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 Thu Nov 30 02:45:42 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
-  * scripts/dpkg-statoverride.{pl,8}: add new --import option to
-    import settings from /etc/suid.conf
+  * scripts/dpkg-statoverride.{pl,8}: 
+    + add new --import option to import settings from /etc/suid.conf
+    + fix ENOENT issues
+    + use %owner consistently isntead of %owner and %user
 
 Wed Nov 29 17:56:43 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
