use do_fd_copy when extracting ar files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec  3 22:11:22 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * dpkg-deb/extract.c: apply one of Adams do_fd_copy patches
+
 Thu Nov 30 02:45:42 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-statoverride.{pl,8}: 
