--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue 05 Dec 07:43:05 CET 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation.
+
 Mon Dec  4 14:42:01 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-statoverride.pl, main/filesdb.c: merge patch from
