--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.8.0) unstable; urgency=low
     import suidmanager settings.
   * Speedups patches by Adam Heath
   * statoverride fixes by Robert Luberda, Closes: Bug#78436
+  * Add Linux S/390 support. Closes: Bug#79063
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
