add support for using libz

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@ Sat Dec  9 01:51:51 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 Tue 05 Dec 07:43:05 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation.
+  * Makefile.conf.in, configure.in: add new option to use libz
+  * dpkg-deb/Makefile.in, dpkg-deb/build.c, dpkg-deb/extract.c: use libz
+    if so desired
+  * debian/rules: default to using static libz
 
 Mon Dec  4 14:42:01 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
@@ -33,7 +37,6 @@ Mon Dec  4 01:34:57 CET 2000 Wichert Akkerman <wakkerma@debian.org>
     + lib/parse.c: use memset to initialize fieldencountered
     + main/filesdb.c: use new read_fd_into_buf
 
->>>>>>> 1.231
 Sun Dec  3 22:11:22 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * dpkg-deb/extract.c: apply one of Adams do_fd_copy patches
