--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ dpkg (1.8.0) unstable; urgency=low
   * Speedups patches by Adam Heath
   * statoverride fixes by Robert Luberda, Closes: Bug#78436
   * Add Linux S/390 support. Closes: Bug#79063
+  * Using libz to decompress data instead of calling gzip
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
