fd copy loop generalizations

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,17 @@
 Sat Dec  9 01:51:51 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * archtable, scripts/dpkg-architecture.pl: add linux s/390
-
-Tue 05 Dec 07:43:05 CET 2000 peter karlsson <peterk@debian.org>
-
-  * po/sv.po: Updated Swedish translation.
   * Makefile.conf.in, configure.in: add new option to use libz
   * dpkg-deb/Makefile.in, dpkg-deb/build.c, dpkg-deb/extract.c: use libz
     if so desired
   * debian/rules: default to using static libz
+  * include/{dpkg-db.h,dpkg.h.in}, lib/mlib.c, lib/varbuf.c: generalize 
+    fd copy loops
+  * main/filesdb.c: udpates to use read_fd_buf
+
+Tue 05 Dec 07:43:05 CET 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation.
 
 Mon Dec  4 14:42:01 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
