Updated Swedish translation

--- a/doc/sv/deb.5
+++ b/doc/sv/deb.5
@@ -1,9 +1,9 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Authors: Raul Miller, Ian Jackson
-.\" Translation of CVS revision 1.3
-.TH DEB 5 "Januari 2000" "Debianprojektet" "Debian GNU/Linux"
+.\" Translation of CVS revision 1.6
+.TH DEB 5 "Januari 2000" "Debianprojektet" "Debian"
 .SH NAME 
-deb \- Debian GNU/Linux binära paketformat
+deb \- Debians binära paketformat
 .SH SYNOPS
 .IB filenamn .deb
 .SH BESKRIVNING
@@ -71,6 +71,6 @@ med namn som börjar med något annat än understreck, eller (mer troligt)
 gör att huvudversionsnumret ökas.
 .SH SE ÄVEN
 .BR deb (5),
-.BR dpkg-deb (8),
+.BR dpkg-deb (1),
 .BR deb-control (5),
 .IR "Debian Packaging Manual".
