--- a/doc/sv/start-stop-daemon.8
+++ b/doc/sv/start-stop-daemon.8
@@ -2,7 +2,7 @@
 .\" Translation of CVS revision 1.6
 .TH START\-STOP\-DAEMON 8 "15 mars 1997" "Debianprojektet" "Debian GNU/Linux"
 .SH NAMN
-start\-stop\-daemon \- startar och stoppas bakgrundsprocesser
+start\-stop\-daemon \- startar och stoppar bakgrundsprocesser
 .SH SYNOPS
 .B start-stop-daemon
 .BR -S|--start
