--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Dec 09 12:21:35 CET 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po, doc/sv/deb.5, doc/sv/deb-old.5, doc/sv/dpkg.8:
+    Updated Swedish translation.
+  * doc/sv/start-stop-daemon.8: Fixed a typo.
+
 Sat Dec  9 01:51:51 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * archtable, scripts/dpkg-architecture.pl: add linux s/390
@@ -9,7 +15,7 @@ Sat Dec  9 01:51:51 CET 2000 Wichert Akkerman <wakkerma@debian.org>
     fd copy loops
   * main/filesdb.c: udpates to use read_fd_buf
 
-Tue 05 Dec 07:43:05 CET 2000 peter karlsson <peterk@debian.org>
+Tue Dec 05 07:43:05 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation.
 
@@ -55,11 +61,11 @@ Wed Nov 29 17:56:43 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * po/gl.po: updated
 
-Tue 28 Nov 18:48:52 CET 2000 peter karlsson <peterk@debian.org>
+Tue Nov 28 18:48:52 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Terminology changes
 
-Sat 25 Nov 22:05:19 CET 2000 peter karlsson <peterk@debian.org>
+Sat Nov 25 22:05:19 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation
 
@@ -124,7 +130,7 @@ Tue Nov  7 00:45:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
     changes our $admindir assignment so we have to manually add
     "/alternatives" to the path
 
-Mon 06 Nov 07:24:11 CET 2000 peter karlsson <peterk@debian.org>
+Mon Nov 06 07:24:11 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated.
 
@@ -147,11 +153,11 @@ Sun Nov  5 10:00:31 EST 2000 Ben Collins <bcollins@debian.org>
   * Create branch point for versioned provides
   * Revert patches for it from the HEAD
 
-Sun 29 Oct 23:33:48 CET 2000 peter karlsson <peterk@debian.org>
+Sun Oct 29 23:33:48 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: some corrections
 
-Sun 29 Oct 01:47:59 CEST 2000 peter karlsson <peterk@debian.org>
+Sun Oct 29 01:47:59 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: translated readfail message parameters from extract.c
 
@@ -196,7 +202,7 @@ Wed Oct  4 16:37:08 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * main/processarc.c: read trailing zeroes from tar output
 
-Tue 03 Oct 23:13:59 CEST 2000 peter karlsson <peterk@debian.org>
+Tue Oct 03 23:13:59 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation.
 
@@ -225,7 +231,7 @@ Sun Sep 17 01:50:34 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-source.1: document -k option for dpkg-buildpackage
 
-Sat 16 Sep 22:55:49 CEST 2000 peter karlsson <peterk@debian.org>
+Sat Sep 16 22:55:49 CEST 2000 peter karlsson <peterk@debian.org>
 
  * doc/sv/822-date.1, doc/sv/dpkg-split.8: Initial Swedish translation.
  * doc/sv/Makefile.in: Added more Swedish manual pages to install.
