Add gettext to build-depends

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Dec 11 01:10:19 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/control: add gettext to the build-depends
+
 Sun Dec 10 00:10:27 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/mlib.c: remove no longer used struct
