fix warning when trying to remove a non-existing statoverride

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Dec 12 16:27:59 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-statoverride.pl: fix warning when trying to remove a
+    non-existing override.
+
 Mon Dec 11 01:10:19 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/control: add gettext to the build-depends
