--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ dpkg (1.8.0) unstable; urgency=low
   * Add Linux S/390 support. Closes: Bug#79063
   * Using libz to decompress data instead of calling gzip
   * Add gettext to build-depends
+  * Fix warning when trying to remove a non-existing statoverride.
+    Closes: Bug#79352
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
