main/archives.c: create files, fifos, devices and directories with mode 0   too close a small window when they are readable before we apply the correct   permissions. main/archives.c: newtarobject_allmodes() updated to handle statoverrides

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Dec 13 16:48:47 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/archives.c: create files, fifos, devices and directories with mode 0
+    too close a small window when they are readable before we apply the correct
+    permissions.
+  * main/archives.c: newtarobject_allmodes() updated to handle statoverrides
+
 Tue Dec 12 16:27:59 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-statoverride.pl: fix warning when trying to remove a
