--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Wed Dec 13 16:48:47 CET 2000 Wichert Akkerman <wakkerma@debian.org>
     too close a small window when they are readable before we apply the correct
     permissions.
   * main/archives.c: newtarobject_allmodes() updated to handle statoverrides
+  * main/dpkg.8: grammar fix
 
 Tue Dec 12 16:27:59 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
