--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 17 13:34:06 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/control: fix typo in Build-Depends and add zlib1g-dev
+
 Wed Dec 13 16:48:47 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * main/archives.c: create files, fifos, devices and directories with mode 0
