Updated Swedish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Dec 18 07:37:10 CET 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation.
+
 Sun Dec 17 13:34:06 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/control: fix typo in Build-Depends and add zlib1g-dev
