--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec 20 01:55:59 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-architecture.pl: fix typo / syntax error
+
 Mon Dec 18 07:37:10 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation.
