Fix building of debs, when there is no given compression on the cmdline.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec 20 01:11:13 CST 2000 Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/build.c: Fix building of debs, when there is no given
+    compression on the cmdline.
+
 Wed Dec 20 01:55:59 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-architecture.pl: fix typo / syntax error
