Lesson the memory footprint.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec 20 01:31:28 CST 2000 Adam Heath <doogie@debian.org>
+
+  * lib/nfmalloc.c, lib/parsehelp.c: Lesson the memory footprint.
+
 Wed Dec 20 01:11:13 CST 2000 Adam Heath <doogie@debian.org>
 
   * dpkg-deb/build.c: Fix building of debs, when there is no given
