--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.8.0) unstable; urgency=low
 
-  * Fix two memory leaks. Closes: Bug#74259
+  * Fix two memory leaks, and lesson the memory foot print a tad.  Hints
+    taken from 74259.
   * Fix some things perl5.6 complains about. Closes: Bug#77337
   * Fix referenes to dpkg-deb manpage. Closes: Bug#77855
   * Update Galish translation
