* main/processarc.c: Don't copy trailing zeros from dpkg-deb pipe. * main/archives.c: Fix some i8ln. * dpkg-deb/extract.c: Remove skipmember(), and use the buffer copy code.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Dec 20 01:39:30 CST 2000 Adam Heath <doogie@debian.org>
+
+  * main/processarc.c: Don't copy trailing zeros from dpkg-deb
+    pipe.
+  * main/archives.c: Fix some i8ln.
+  * dpkg-deb/extract.c: Remove skipmember(), and use the buffer
+    copy code.
+
 Wed Dec 20 01:31:28 CST 2000 Adam Heath <doogie@debian.org>
 
   * lib/nfmalloc.c, lib/parsehelp.c: Lesson the memory footprint.
