Move -D_GNU_SOURCE from configure.in to Makefile, and from CFLAGS to DEFS. This macro was getting lost if someone was setting CFLAGS on the cmdline. Perhaps this should be moved into config.h.in?

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Dec 20 02:17:56 CST 2000 Adam Heath <doogie@debian.org>
+
+  * configure.in, Makefile.conf.in: Move -D_GNU_SOURCE from configure.in
+    to Makefile, and from CFLAGS to DEFS.  This macro was getting lost
+    if someone was setting CFLAGS on the cmdline.  Perhaps this should
+    be moved into config.h.in?
+
 Wed Dec 20 01:39:30 CST 2000 Adam Heath <doogie@debian.org>
 
   * main/processarc.c: Don't copy trailing zeros from dpkg-deb
