--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 21 06:58:21 CET 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: The "Merry Christmas" update of the Swedish translation.
+
 Wed Dec 20 12:50:55 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * main/processarc.c: revert change from Adam: reading the trailing
