--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec 21 01:40:02 CST 2000 Adam Heath <doogie@debian.org>
+
+  * lib/mlib.c, include/dpkg.h.in: Switch all size parameters to
+    ssize_t.  Also, return totalread, not bytesread, in buffer_copy.
+
 Thu Dec 21 01:22:22 CST 2000 Adam Heath <doogie@debian.org>
 
   * lib/mlib.c: Handle EINTR on reading and writting in buffer_copy.
