--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Add armv3l to archtable.  Closes: Bug#72125
   * Fix two memory leaks, and lesson the memory foot print a tad.  Hints
     taken from 74259.
   * Fix some things perl5.6 complains about. Closes: Bug#77337
