--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -432,7 +432,7 @@ be used with \fB-i\fP, \fB-A\fP, \fB--install\fP, \fB--unpack\fP and
 Don't install a package if a newer version of the same package is already
 installed. This is an alias of \fB--refuse-downgrade.\fP
 .TP
-\fB-R\fP | \fB--root=\fP\fIdir\fP | \fB--admindir=\fP\fIdir\fP | \fB--instdir=\fP\fIdir\fP
+\fB--root=\fP\fIdir\fP | \fB--admindir=\fP\fIdir\fP | \fB--instdir=\fP\fIdir\fP
 Change default directories.  \fBadmindir\fP defaults to
 \fI/var/lib/dpkg\fP and contains many files that give information
 about status of installed or uninstalled packages, etc.  \fBinstdir\fP
