--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 21 03:29:04 CST 2000 Adam Heath <doogie@debian.org>
+
+  * main/dpkg.8: Remove duplicate -R(it doesn't set --root).
+
 Thu Dec 21 03:24:38 CST 2000 Adam Heath <doogie@debian.org>
 
   * archtable: Add armv3l.
