s/--cmpversions/--compare-versions/

--- a/po/dpkg.pot
+++ b/po/dpkg.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-12-21 01:36-0600\n"
+"POT-Creation-Date: 2000-12-21 03:34-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1672,11 +1672,12 @@ msgid "dpkg: warning, architecture `%s' not in remapping table\n"
 msgstr ""
 
 #: main/enquiry.c:764
-msgid "--cmpversions takes three arguments: <version> <relation> <version>"
+msgid ""
+"--compare-versions takes three arguments: <version> <relation> <version>"
 msgstr ""
 
 #: main/enquiry.c:769
-msgid "--cmpversions bad relation"
+msgid "--compare-versions bad relation"
 msgstr ""
 
 #: main/enquiry.c:774
