--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Fix typo in --compare-versions error message.  Closes: Bug#66474.
   * -R doesn't mean --root.  Closes: Bug#66068, #72013
   * Add armv3l to archtable.  Closes: Bug#72125
   * Fix two memory leaks, and lesson the memory foot print a tad.  Hints
