Closes bug 49581, because we don't use external gzip anymore.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec 21 03:41:56 CST 2000 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Closes bug 49581, because we don't use
+    external gzip anymore.
+
 Thu Dec 21 03:35:56 CST 2000 Adam Heath <doogie@debian.org>
 
   * main/enquiry.c: s/--cmpversions/--compare-versions/
