--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,8 @@ dpkg (1.8.0) unstable; urgency=low
   * Speedups patches by Adam Heath
   * statoverride fixes by Robert Luberda, Closes: Bug#78436
   * Add Linux S/390 support. Closes: Bug#79063
-  * Using libz to decompress data instead of calling gzip
+  * Using libz to decompress data instead of calling gzip.
+    Closes: Bug#49581
   * Add gettext to build-depends
   * Fix warning when trying to remove a non-existing statoverride.
     Closes: Bug#79352
