--- a/doc/sv/dpkg.8
+++ b/doc/sv/dpkg.8
@@ -1,5 +1,5 @@
 .\" Hey Emacs! This file is -*- nroff -*- source.
-.\" Translation of CVS revision 1.11
+.\" Translation of CVS revision 1.13
 .TH DPKG 8 "12 april 1998" "Debianprojektet" "Debian GNU/Linux"
 .SH NAMN
 dpkg \- en mellannivåpakethanterare för Debian GNU/Linux
@@ -453,7 +453,7 @@ Installera inte paketet om en nyare version av samma paket redan är
 installerat.
 Detta är ett alias för \fB--refuse-downgrade.\fP
 .TP
-\fB-R\fP | \fB--root=\fP\fIkat\fP | \fB--admindir=\fP\fIkat\fP | \fB--instdir=\fP\fIkat\fP
+\fB--root=\fP\fIkat\fP | \fB--admindir=\fP\fIkat\fP | \fB--instdir=\fP\fIkat\fP
 Ändra standardkataloger.
 Förval för \fBadmindir\fP är \fI/var/lib/dpkg\fP, och innehåller filer som
 ger information om status för installerade och ej installerade paket, osv.
