--- a/po/sv.po
+++ b/po/sv.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.8.0\n"
-"POT-Creation-Date: 2000-12-21 06:23+0100\n"
-"PO-Revision-Date: 2000-12-21 06:59+0100\n"
+"POT-Creation-Date: 2000-12-21 19:29+0100\n"
+"PO-Revision-Date: 2000-12-21 19:30+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -512,13 +512,13 @@ msgstr "okänd datatyp \"%i\" i buffer_read\n"
 
 #: lib/mlib.c:209
 #, c-format
-msgid "failed to allocate buffer in do_fd_read (%s)"
-msgstr "kunde inte allokera buffer i do_fd_read (%s)"
+msgid "failed to allocate buffer in buffer_copy (%s)"
+msgstr "kunde inte allokera buffer i buffer_copy (%s)"
 
-#: lib/mlib.c:228
+#: lib/mlib.c:240
 #, c-format
-msgid "failed in do_fd_read on read (%s)"
-msgstr "kunde inte läsa i do_fd_read (%s)"
+msgid "failed in buffer_copy (%s)"
+msgstr "misslyckades i buffer_copy (%s)"
 
 #: lib/myopt.c:39
 #, c-format
@@ -1799,12 +1799,13 @@ msgid "dpkg: warning, architecture `%s' not in remapping table\n"
 msgstr "dpkg: varning, arkitekturen \"%s\" finns ej i ommappningstabellen\n"
 
 #: main/enquiry.c:764
-msgid "--cmpversions takes three arguments: <version> <relation> <version>"
-msgstr "--cmpversions tar tre argument: <version> <relation> <version>"
+msgid ""
+"--compare-versions takes three arguments: <version> <relation> <version>"
+msgstr "--compare-versions tar tre argument: <version> <relation> <version>"
 
 #: main/enquiry.c:769
-msgid "--cmpversions bad relation"
-msgstr "--cmpversions: ogiltig relation"
+msgid "--compare-versions bad relation"
+msgstr "--compare-versions: ogiltig relation"
 
 #: main/enquiry.c:774
 #, c-format
@@ -5578,6 +5579,9 @@ msgstr ""
 " ^l             rita om skärmen\n"
 "  /             sök (Enter avbryter)\n"
 "  \\             repetera senaste sökning\n"
+
+#~ msgid "failed in do_fd_read on read (%s)"
+#~ msgstr "kunde inte läsa i do_fd_read (%s)"
 
 #~ msgid ""
 #~ "tarobject ti->Name=`%s' Mode=%lo owner=%u.%u Type=%d(%c) ti->LinkName=`%s' "
