--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Dec 23 02:11:27 CST 2000 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-buildpackage.sh: Add -t to -h output.
+
 Thu Dec 21 19:30:56 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po, doc/sv/dpkg.8: The "Even Merrier Christmas" update of the
