--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Dec 23 03:06:19 CST 2000 Adam Heath <doogie@debian.org>
+
+  * scripts/cl-debian.pl: Make '#' optional in Closes: tags.
+
 Sat Dec 23 02:11:27 CST 2000 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-buildpackage.sh: Add -t to -h output.
